# Ambient

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs
app/src/client/: mod.rs
crates/app/: Cargo.toml  README.md
crates/app-surface/src/: lib.rs
crates/app/examples/: hello_world.rs
crates/app/src/: app.rs  lib.rs  renderers.rs
crates/app/src/ffi/: ios.rs  mod.rs
crates/arboard/: Cargo.toml
crates/arboard/src/: lib.rs
crates/asset_cache/src/: lib.rs
crates/cameras/src/: free.rs  lib.rs  spherical.rs
crates/client_shared/: Cargo.toml
crates/client_shared/src/: game_view.rs  player.rs
crates/core/: Cargo.toml
crates/core/src/: bounding.rs  hierarchy.rs  lib.rs  transform.rs  window.rs
crates/decals/src/: lib.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: generated.rs  lib.rs
crates/gizmos/: Cargo.toml
crates/gizmos/src/: render.rs
crates/gpu/: Cargo.toml
crates/gpu/src/: blit.rs  fill.rs  gpu.2rs  gpu.rs  gpu_run.rs  gpu_trait.rs  lib.rs  mesh_buffer.rs  multi_buffer.rs  sampler.rs  shader_module.rs  std_assets.rs  texture.rs  texture_loaders.rs  typed_buffer.rs
crates/gpu_ecs/src/: component.rs  lib.rs  sync.rs  update.rs
crates/gpu_ecs/tests/: gpu_ecs.rs
crates/input/src/: lib.rs
crates/meshes/src/: lib.rs
crates/model/src/: lib.rs  loading_material.rs
crates/native_std/: Cargo.toml
crates/native_std/src/uncategorized/: download_asset.rs
crates/pipeline_types/: Cargo.toml
crates/procedurals/src/: lib.rs
crates/rect/src/: lib.rs
crates/renderer/examples/custom_material/: main.rs
crates/renderer/src/: collect.rs  globals.rs  lib.rs  outlines.rs  overlay_renderer.rs  renderer.rs  shadow_renderer.rs  skinning.rs  target.rs  transparent_renderer.rs  tree_renderer.rs
crates/renderer/src/materials/: flat_material.rs  pbr_material.rs
crates/renderer/src/shaders/: mod.rs
crates/sky/src/: lib.rs
crates/sys/: Cargo.toml
crates/terrain/src/: terrain_shader.rs
crates/terrain/src/brushes/: normalmap.rs  thermal_erosion.rs  water_sim.rs
crates/text/src/: lib.rs  text_material.rs
crates/ui_native/: Cargo.toml
crates/ui_native/src/: graph.rs  image.rs  lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/client/implementation/: conversion.rs  specific.rs
crates/wasm/src/shared/: module.rs
guest/rust/api_core/src/internal/: generated.rs
libs/physxx/: Cargo.toml
libs/physxx/src/: actor.rs  serialization.rs
schema/schema/includes/: app_.toml
shared_crates/dirs/: Cargo.toml
shared_crates/dirs/src/: lib.rs
shared_crates/guest_bridge/: Cargo.toml
shared_crates/shared_types/src/: winit.rs
shared_crates/ui/: Cargo.toml
shared_crates/ui/src/: button.rs
