[package]
name = "physxx"
authors = ["Fredrik Norén <fredrik.jw.noren@gmail.com>"]
edition = "2021"
description = "Wrapper around the PhysX C++ API that aims to preserve the original API as much as possible."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
physx-sys = {git ="https://github.com/alanpoon/physx-rs", branch = "android"}
glam = { workspace = true }
bitflags = { workspace = true }
enumflags2 = { workspace = true }
as-any = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true }
