[package]
name = "ambient_dirs"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Directories that Ambient uses to store its data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

[dependencies]
directories = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.20"
ndk-context = "0.1.1"
log = "0.4.14"