[package]
name = "ambient_dirs"
version = { workspace = true }
rust-version = { workspace = true }
edition = "2021"
description = "Directories that Ambient uses to store its data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmbientRun/Ambient"

[dependencies]
directories = { workspace = true }
lazy_static = "1.4.0"

#[target.'cfg(not(target_os = "unknown"))'.dependencies]
[target.'cfg(target_os = "android")'.dependencies]
android-activity = "0.4.3"
#jni = "0.20"
#ndk-context = "0.1.1"

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"
objc = "0.2.7"
core-graphics = "0.23.1"